kustomize/demo-color-race-game/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: color-race-game
spec:
  selector:
    app: color-race-game
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
