kustomize/demo-color-race-game/base/resources/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: color-race-game
spec:
  to:
    kind: Service
    name: color-race-game
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
